# posner-py-analysis

./: .gitignore  00_01_plot_RTs.py  00_01b_epoch_data.py  00_02_rest_alpha_reactivity.py  00_03_compare_pre_post.py  pyproject.toml
lib/: data.py  epochs.py
outputs/: day1_pre_post_comparison.csv  day2_pre_post_comparison.csv  day3_pre_post_comparison.csv
