[project]
authors = [{name = "Fernando Rodriguez", email = "ferrodplazas@gmail.com"}]
name = "analysis"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64"]

[tool.pixi.environments]
default = { features = [] }
sonpy = { features = ["sonpy-feat"], no-default-feature = true }

[tool.pixi.feature.sonpy-feat]
platforms = ["osx-64", "linux-64"]

[tool.pixi.feature.sonpy-feat.dependencies]
python = "3.9.*"
numpy = ">=2.0.2,<3"

[tool.pixi.feature.sonpy-feat.pypi-dependencies]
sonpy = ">=1.9.12, <2"

[tool.pixi.pypi-dependencies]
analysis = { path = ".", editable = true }
neo = ">=0.14.4, <0.15"

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.14.*"
numpy = ">=2.4.6,<3"
pandas = ">=3.0.3,<4"
mne = ">=1.12.1,<2"
loguru = ">=0.7.3,<0.8"
scipy = ">=1.17.1,<2"
fooof = ">=1.1.1,<2"
